--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.9",
-    "compressorjs": "^1.2.1",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compressorjs": "^1.2.1",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.4.0",
     "firebase-tools": "^13.32.0",
