--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-slot": "^1.2.2",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.9",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compressorjs": "^1.2.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.4.0",
     "firebase-tools": "^13.32.0",
@@ -25,6 +27,7 @@
     "lucide-react": "^0.477.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.3",
@@ -32,7 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/node": "^22.15.3",
+    "@types/node": "^22.15.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
