--- a/package.json
+++ b/package.json
@@ -26,13 +26,17 @@
     "firebase": "^11.4.0",
     "firebase-tools": "^13.32.0",
     "framer-motion": "^12.5.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.477.0",
+    "midtrans-client": "^1.4.2",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.3",
+    "simple-peer": "^9.11.1",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
