--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noEmitOnError": false,
+    "skipLibCheck": true,
+    "strict": false
   }
 }
