--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.4.0",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^6.0.1",
     "firebase-tools": "^13.32.0",
     "framer-motion": "^12.5.0",
     "jspdf": "^3.0.1",
